syntax = "proto3";

package aiva.errors;

option go_package = "github.com/kyle0527/aiva/services/aiva_common/protocols/errors";

import "aiva_enums.proto";

// =============================================
// 統一錯誤碼映射系統
// =============================================

// 統一錯誤響應結構
message ErrorResponse {
  ErrorCode error_code = 1;
  string message = 2;
  map<string, string> details = 3;
  string error_id = 4;
  int64 timestamp = 5;
  string service_name = 6;
  repeated ErrorTrace trace = 7;
}

// 錯誤追蹤信息
message ErrorTrace {
  string function_name = 1;
  string file_name = 2;
  int32 line_number = 3;
  string language = 4;
  map<string, string> context = 5;
}

// 跨語言錯誤碼對照
message ErrorMapping {
  ErrorCode aiva_code = 1;
  map<string, int32> language_codes = 2; // language -> native error code
  map<string, string> language_messages = 3; // language -> localized message
}

// =============================================
// AIVA 錯誤碼枚舉
// =============================================

enum ErrorCode {
  // ==================== 通用錯誤 (0-99) ====================
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_SUCCESS = 1;
  ERROR_CODE_UNKNOWN = 2;
  ERROR_CODE_INTERNAL_ERROR = 3;
  ERROR_CODE_INVALID_ARGUMENT = 4;
  ERROR_CODE_NOT_FOUND = 5;
  ERROR_CODE_ALREADY_EXISTS = 6;
  ERROR_CODE_PERMISSION_DENIED = 7;
  ERROR_CODE_RESOURCE_EXHAUSTED = 8;
  ERROR_CODE_FAILED_PRECONDITION = 9;
  ERROR_CODE_ABORTED = 10;
  ERROR_CODE_OUT_OF_RANGE = 11;
  ERROR_CODE_UNIMPLEMENTED = 12;
  ERROR_CODE_UNAVAILABLE = 13;
  ERROR_CODE_DATA_LOSS = 14;
  ERROR_CODE_UNAUTHENTICATED = 15;
  ERROR_CODE_TIMEOUT = 16;
  ERROR_CODE_CANCELLED = 17;
  ERROR_CODE_DEADLINE_EXCEEDED = 18;
  ERROR_CODE_INVALID_STATE = 19;
  ERROR_CODE_CONFIGURATION_ERROR = 20;

  // ==================== 網路相關錯誤 (100-199) ====================
  ERROR_CODE_NETWORK_UNREACHABLE = 100;
  ERROR_CODE_CONNECTION_REFUSED = 101;
  ERROR_CODE_CONNECTION_TIMEOUT = 102;
  ERROR_CODE_CONNECTION_RESET = 103;
  ERROR_CODE_DNS_RESOLUTION_FAILED = 104;
  ERROR_CODE_SSL_HANDSHAKE_FAILED = 105;
  ERROR_CODE_SSL_CERTIFICATE_ERROR = 106;
  ERROR_CODE_HTTP_BAD_REQUEST = 107;
  ERROR_CODE_HTTP_UNAUTHORIZED = 108;
  ERROR_CODE_HTTP_FORBIDDEN = 109;
  ERROR_CODE_HTTP_NOT_FOUND = 110;
  ERROR_CODE_HTTP_METHOD_NOT_ALLOWED = 111;
  ERROR_CODE_HTTP_INTERNAL_SERVER_ERROR = 112;
  ERROR_CODE_HTTP_BAD_GATEWAY = 113;
  ERROR_CODE_HTTP_SERVICE_UNAVAILABLE = 114;
  ERROR_CODE_HTTP_GATEWAY_TIMEOUT = 115;
  ERROR_CODE_PROXY_ERROR = 116;
  ERROR_CODE_RATE_LIMITED = 117;

  // ==================== 資料庫相關錯誤 (200-299) ====================
  ERROR_CODE_DATABASE_CONNECTION_FAILED = 200;
  ERROR_CODE_DATABASE_TIMEOUT = 201;
  ERROR_CODE_DATABASE_LOCKED = 202;
  ERROR_CODE_DATABASE_CONSTRAINT_VIOLATION = 203;
  ERROR_CODE_DATABASE_INTEGRITY_ERROR = 204;
  ERROR_CODE_DATABASE_SYNTAX_ERROR = 205;
  ERROR_CODE_DATABASE_ACCESS_DENIED = 206;
  ERROR_CODE_DATABASE_TRANSACTION_FAILED = 207;
  ERROR_CODE_DATABASE_DEADLOCK = 208;
  ERROR_CODE_DATABASE_CORRUPTION = 209;
  ERROR_CODE_DATABASE_SCHEMA_MISMATCH = 210;
  ERROR_CODE_DATABASE_MIGRATION_FAILED = 211;

  // ==================== 認證授權錯誤 (300-399) ====================
  ERROR_CODE_AUTH_INVALID_CREDENTIALS = 300;
  ERROR_CODE_AUTH_TOKEN_EXPIRED = 301;
  ERROR_CODE_AUTH_TOKEN_INVALID = 302;
  ERROR_CODE_AUTH_TOKEN_MISSING = 303;
  ERROR_CODE_AUTH_INSUFFICIENT_PERMISSIONS = 304;
  ERROR_CODE_AUTH_ACCOUNT_DISABLED = 305;
  ERROR_CODE_AUTH_ACCOUNT_LOCKED = 306;
  ERROR_CODE_AUTH_PASSWORD_EXPIRED = 307;
  ERROR_CODE_AUTH_MFA_REQUIRED = 308;
  ERROR_CODE_AUTH_MFA_FAILED = 309;
  ERROR_CODE_AUTH_SESSION_EXPIRED = 310;
  ERROR_CODE_AUTH_ROLE_NOT_ASSIGNED = 311;

  // ==================== 檔案系統錯誤 (400-499) ====================
  ERROR_CODE_FILE_NOT_FOUND = 400;
  ERROR_CODE_FILE_ACCESS_DENIED = 401;
  ERROR_CODE_FILE_ALREADY_EXISTS = 402;
  ERROR_CODE_FILE_TOO_LARGE = 403;
  ERROR_CODE_FILE_CORRUPTED = 404;
  ERROR_CODE_FILE_LOCKED = 405;
  ERROR_CODE_DIRECTORY_NOT_FOUND = 406;
  ERROR_CODE_DIRECTORY_NOT_EMPTY = 407;
  ERROR_CODE_DISK_FULL = 408;
  ERROR_CODE_DISK_IO_ERROR = 409;
  ERROR_CODE_FILE_FORMAT_INVALID = 410;
  ERROR_CODE_FILE_ENCODING_ERROR = 411;

  // ==================== 掃描相關錯誤 (500-599) ====================
  ERROR_CODE_SCAN_INITIALIZATION_FAILED = 500;
  ERROR_CODE_SCAN_TARGET_UNREACHABLE = 501;
  ERROR_CODE_SCAN_AUTHENTICATION_FAILED = 502;
  ERROR_CODE_SCAN_PERMISSION_DENIED = 503;
  ERROR_CODE_SCAN_TIMEOUT = 504;
  ERROR_CODE_SCAN_INTERRUPTED = 505;
  ERROR_CODE_SCAN_INVALID_TARGET = 506;
  ERROR_CODE_SCAN_RESOURCE_EXHAUSTED = 507;
  ERROR_CODE_SCAN_ENGINE_ERROR = 508;
  ERROR_CODE_SCAN_PLUGIN_ERROR = 509;
  ERROR_CODE_SCAN_RESULT_PARSING_FAILED = 510;
  ERROR_CODE_SCAN_CONFIGURATION_INVALID = 511;

  // ==================== 漏洞相關錯誤 (600-699) ====================
  ERROR_CODE_VULNERABILITY_NOT_FOUND = 600;
  ERROR_CODE_VULNERABILITY_ALREADY_REPORTED = 601;
  ERROR_CODE_VULNERABILITY_ANALYSIS_FAILED = 602;
  ERROR_CODE_VULNERABILITY_SCORING_FAILED = 603;
  ERROR_CODE_VULNERABILITY_REMEDIATION_FAILED = 604;
  ERROR_CODE_VULNERABILITY_VERIFICATION_FAILED = 605;
  ERROR_CODE_VULNERABILITY_EXPORT_FAILED = 606;
  ERROR_CODE_VULNERABILITY_IMPORT_FAILED = 607;

  // ==================== AI 相關錯誤 (700-799) ====================
  ERROR_CODE_AI_MODEL_NOT_LOADED = 700;
  ERROR_CODE_AI_MODEL_INFERENCE_FAILED = 701;
  ERROR_CODE_AI_INSUFFICIENT_CONTEXT = 702;
  ERROR_CODE_AI_TRAINING_FAILED = 703;
  ERROR_CODE_AI_MEMORY_EXHAUSTED = 704;
  ERROR_CODE_AI_GPU_ERROR = 705;
  ERROR_CODE_AI_INVALID_INPUT = 706;
  ERROR_CODE_AI_PREDICTION_UNCERTAIN = 707;
  ERROR_CODE_AI_SERVICE_UNAVAILABLE = 708;
  ERROR_CODE_AI_QUOTA_EXCEEDED = 709;

  // ==================== 配置相關錯誤 (800-899) ====================
  ERROR_CODE_CONFIG_FILE_NOT_FOUND = 800;
  ERROR_CODE_CONFIG_PARSE_ERROR = 801;
  ERROR_CODE_CONFIG_VALIDATION_FAILED = 802;
  ERROR_CODE_CONFIG_MISSING_REQUIRED_FIELD = 803;
  ERROR_CODE_CONFIG_INVALID_FORMAT = 804;
  ERROR_CODE_CONFIG_ENVIRONMENT_MISSING = 805;
  ERROR_CODE_CONFIG_ENCRYPTION_FAILED = 806;
  ERROR_CODE_CONFIG_DECRYPTION_FAILED = 807;
  ERROR_CODE_CONFIG_BACKUP_FAILED = 808;
  ERROR_CODE_CONFIG_RESTORE_FAILED = 809;

  // ==================== 插件相關錯誤 (900-999) ====================
  ERROR_CODE_PLUGIN_NOT_FOUND = 900;
  ERROR_CODE_PLUGIN_LOAD_FAILED = 901;
  ERROR_CODE_PLUGIN_INITIALIZATION_FAILED = 902;
  ERROR_CODE_PLUGIN_EXECUTION_FAILED = 903;
  ERROR_CODE_PLUGIN_INCOMPATIBLE_VERSION = 904;
  ERROR_CODE_PLUGIN_DEPENDENCY_MISSING = 905;
  ERROR_CODE_PLUGIN_CONFIGURATION_INVALID = 906;
  ERROR_CODE_PLUGIN_LICENSE_INVALID = 907;
  ERROR_CODE_PLUGIN_DISABLED = 908;
  ERROR_CODE_PLUGIN_COMMUNICATION_FAILED = 909;

  // ==================== 整合相關錯誤 (1000-1099) ====================
  ERROR_CODE_INTEGRATION_SERVICE_UNAVAILABLE = 1000;
  ERROR_CODE_INTEGRATION_API_KEY_INVALID = 1001;
  ERROR_CODE_INTEGRATION_RATE_LIMIT_EXCEEDED = 1002;
  ERROR_CODE_INTEGRATION_DATA_FORMAT_MISMATCH = 1003;
  ERROR_CODE_INTEGRATION_WEBHOOK_FAILED = 1004;
  ERROR_CODE_INTEGRATION_SYNC_FAILED = 1005;
  ERROR_CODE_INTEGRATION_AUTHENTICATION_FAILED = 1006;
  ERROR_CODE_INTEGRATION_AUTHORIZATION_FAILED = 1007;

  // ==================== 系統資源錯誤 (1100-1199) ====================
  ERROR_CODE_SYSTEM_MEMORY_EXHAUSTED = 1100;
  ERROR_CODE_SYSTEM_CPU_OVERLOAD = 1101;
  ERROR_CODE_SYSTEM_DISK_FULL = 1102;
  ERROR_CODE_SYSTEM_PROCESS_LIMIT_REACHED = 1103;
  ERROR_CODE_SYSTEM_THREAD_LIMIT_REACHED = 1104;
  ERROR_CODE_SYSTEM_FILE_DESCRIPTOR_LIMIT = 1105;
  ERROR_CODE_SYSTEM_NETWORK_INTERFACE_DOWN = 1106;
  ERROR_CODE_SYSTEM_SERVICE_UNAVAILABLE = 1107;

  // ==================== 任務相關錯誤 (1200-1299) ====================
  ERROR_CODE_TASK_NOT_FOUND = 1200;
  ERROR_CODE_TASK_ALREADY_RUNNING = 1201;
  ERROR_CODE_TASK_EXECUTION_FAILED = 1202;
  ERROR_CODE_TASK_TIMEOUT = 1203;
  ERROR_CODE_TASK_CANCELLED = 1204;
  ERROR_CODE_TASK_DEPENDENCY_FAILED = 1205;
  ERROR_CODE_TASK_RESOURCE_CONFLICT = 1206;
  ERROR_CODE_TASK_PRIORITY_CONFLICT = 1207;
  ERROR_CODE_TASK_SCHEDULING_FAILED = 1208;
  ERROR_CODE_TASK_RESULT_INVALID = 1209;

  // ==================== 報告相關錯誤 (1300-1399) ====================
  ERROR_CODE_REPORT_GENERATION_FAILED = 1300;
  ERROR_CODE_REPORT_TEMPLATE_NOT_FOUND = 1301;
  ERROR_CODE_REPORT_DATA_INSUFFICIENT = 1302;
  ERROR_CODE_REPORT_EXPORT_FAILED = 1303;
  ERROR_CODE_REPORT_FORMATTING_ERROR = 1304;
  ERROR_CODE_REPORT_VALIDATION_FAILED = 1305;
  ERROR_CODE_REPORT_DELIVERY_FAILED = 1306;

  // ==================== 跨語言特定錯誤 (1400-1499) ====================
  ERROR_CODE_RUST_PANIC = 1400;
  ERROR_CODE_RUST_COMPILATION_FAILED = 1401;
  ERROR_CODE_RUST_FFI_ERROR = 1402;
  ERROR_CODE_PYTHON_IMPORT_ERROR = 1403;
  ERROR_CODE_PYTHON_SYNTAX_ERROR = 1404;
  ERROR_CODE_PYTHON_RUNTIME_ERROR = 1405;
  ERROR_CODE_GO_PANIC = 1406;
  ERROR_CODE_GO_BUILD_ERROR = 1407;
  ERROR_CODE_GO_RUNTIME_ERROR = 1408;
  ERROR_CODE_JAVASCRIPT_SYNTAX_ERROR = 1409;
  ERROR_CODE_JAVASCRIPT_RUNTIME_ERROR = 1410;
  ERROR_CODE_TYPESCRIPT_COMPILATION_ERROR = 1411;

  // ==================== 通訊相關錯誤 (1500-1599) ====================
  ERROR_CODE_GRPC_UNAVAILABLE = 1500;
  ERROR_CODE_GRPC_DEADLINE_EXCEEDED = 1501;
  ERROR_CODE_GRPC_INTERNAL = 1502;
  ERROR_CODE_GRPC_INVALID_ARGUMENT = 1503;
  ERROR_CODE_GRPC_NOT_FOUND = 1504;
  ERROR_CODE_GRPC_ALREADY_EXISTS = 1505;
  ERROR_CODE_GRPC_PERMISSION_DENIED = 1506;
  ERROR_CODE_GRPC_RESOURCE_EXHAUSTED = 1507;
  ERROR_CODE_GRPC_FAILED_PRECONDITION = 1508;
  ERROR_CODE_GRPC_ABORTED = 1509;
  ERROR_CODE_GRPC_OUT_OF_RANGE = 1510;
  ERROR_CODE_GRPC_UNIMPLEMENTED = 1511;
  ERROR_CODE_GRPC_DATA_LOSS = 1512;
  ERROR_CODE_GRPC_UNAUTHENTICATED = 1513;

  // ==================== 擴展錯誤 (1600+) ====================
  ERROR_CODE_CUSTOM_EXTENSION_BASE = 1600;
}

// =============================================
// 錯誤處理工具函數定義
// =============================================

// 錯誤嚴重程度對照
message ErrorSeverityMapping {
  ErrorCode error_code = 1;
  aiva.enums.Severity severity = 2;
  bool is_recoverable = 3;
  bool requires_user_action = 4;
  repeated string suggested_actions = 5;
}

// 錯誤分類
message ErrorCategory {
  string category_name = 1;
  repeated ErrorCode error_codes = 2;
  string description = 3;
  string handling_strategy = 4;
}

// 錯誤統計
message ErrorStatistics {
  ErrorCode error_code = 1;
  int64 occurrence_count = 2;
  int64 first_occurrence = 3;
  int64 last_occurrence = 4;
  double average_resolution_time = 5;
  map<string, int64> occurrence_by_service = 6;
}