#!/usr/bin/env python3
"""
TODO-006 gRPC æœå‹™æ¡†æ¶å®Œæ•´æ€§æ¸¬è©¦
================================

é©—è­‰çµ±ä¸€é€šä¿¡æ¶æ§‹çš„ gRPC çµ„ä»¶æ˜¯å¦æ­£å¸¸å·¥ä½œ

æ¸¬è©¦ç¯„åœ:
1. gRPC æœå‹™å™¨å•Ÿå‹•å’Œå¥åº·æª¢æŸ¥
2. gRPC å®¢æˆ¶ç«¯é€£æ¥å’Œé€šä¿¡
3. èˆ‡ MQ ç³»çµ±çš„æ•´åˆ
4. è·¨èªè¨€æœå‹™èª¿ç”¨
5. å”è­°è‡ªå‹•åˆ‡æ›
"""

import asyncio
import logging
import sys
import traceback
from pathlib import Path
import json
import time
from typing import Dict, Any

# ç¢ºä¿æ¨¡å¡Šè·¯å¾‘
sys.path.insert(0, str(Path(__file__).parent.parent.parent))

from services.aiva_common.grpc.grpc_client import AIVAGRPCClient, grpc_client
from services.aiva_common.grpc.grpc_server import AIVAGRPCServer
from services.aiva_common.v2_client.aiva_client import AivaClient
from services.aiva_common.messaging.compatibility_layer import message_broker
from services.aiva_common.utils.logging import setup_logger

logger = setup_logger(__name__)


class GRPCIntegrationTester:
    """gRPC æ•´åˆæ¸¬è©¦å™¨"""
    
    def __init__(self):
        self.test_results = {}
        self.server_address = "localhost:50052"  # æ¸¬è©¦å°ˆç”¨ç«¯å£
        self.test_server = None
        self.test_client = None
    
    async def setup_test_environment(self):
        """è¨­ç½®æ¸¬è©¦ç’°å¢ƒ"""
        logger.info("ğŸ”§ è¨­ç½® gRPC æ¸¬è©¦ç’°å¢ƒ...")
        
        try:
            # å•Ÿå‹•æ¸¬è©¦ gRPC æœå‹™å™¨
            self.test_server = AIVAGRPCServer(host="localhost", port=50052)
            
            # åœ¨å¾Œå°å•Ÿå‹•æœå‹™å™¨
            self._server_task = asyncio.create_task(self.test_server.start())
            await asyncio.sleep(2)  # ç­‰å¾…æœå‹™å™¨å•Ÿå‹•
            
            # å‰µå»ºæ¸¬è©¦å®¢æˆ¶ç«¯
            self.test_client = AIVAGRPCClient(self.server_address)
            
            logger.info(f"âœ… æ¸¬è©¦ç’°å¢ƒæº–å‚™å®Œæˆ: {self.server_address}")
            return True
            
        except Exception as e:
            logger.error(f"âŒ æ¸¬è©¦ç’°å¢ƒè¨­ç½®å¤±æ•—: {e}")
            return False
    
    async def cleanup_test_environment(self):
        """æ¸…ç†æ¸¬è©¦ç’°å¢ƒ"""
        logger.info("ğŸ§¹ æ¸…ç†æ¸¬è©¦ç’°å¢ƒ...")
        
        try:
            if self.test_client:
                await self.test_client.close()
            
            if self.test_server:
                await self.test_server.stop()
            
            logger.info("âœ… æ¸¬è©¦ç’°å¢ƒå·²æ¸…ç†")
            
        except Exception as e:
            logger.warning(f"âš ï¸  æ¸…ç†éç¨‹ä¸­å‡ºç¾è­¦å‘Š: {e}")
    
    async def test_grpc_health_check(self) -> Dict[str, Any]:
        """æ¸¬è©¦ gRPC å¥åº·æª¢æŸ¥"""
        logger.info("ğŸ¥ æ¸¬è©¦ gRPC å¥åº·æª¢æŸ¥...")
        
        try:
            result = await self.test_client.health_check()
            
            success = result.get("success", False)
            grpc_available = result.get("grpc_available", False)
            
            logger.info(f"ğŸ“‹ å¥åº·æª¢æŸ¥çµæœ: æˆåŠŸ={success}, gRPCå¯ç”¨={grpc_available}")
            
            return {
                "test_name": "gRPC_Health_Check",
                "success": success,
                "details": result,
                "timestamp": time.time()
            }
            
        except Exception as e:
            logger.error(f"âŒ å¥åº·æª¢æŸ¥æ¸¬è©¦å¤±æ•—: {e}")
            return {
                "test_name": "gRPC_Health_Check", 
                "success": False,
                "error": str(e)
            }
    
    async def test_task_creation(self) -> Dict[str, Any]:
        """æ¸¬è©¦ä»»å‹™å‰µå»º"""
        logger.info("ğŸ“ æ¸¬è©¦ gRPC ä»»å‹™å‰µå»º...")
        
        try:
            task_config = {
                "task_id": f"test_task_{int(time.time())}",
                "task_type": "scan",
                "target_url": "https://example.com",
                "parameters": {"timeout": 30}
            }
            
            result = await self.test_client.create_task(task_config)
            
            success = result.get("success", False)
            protocol = result.get("protocol", "unknown")
            
            logger.info(f"ğŸ“‹ ä»»å‹™å‰µå»ºçµæœ: æˆåŠŸ={success}, å”è­°={protocol}")
            
            return {
                "test_name": "Task_Creation",
                "success": success,
                "protocol": protocol,
                "details": result,
                "timestamp": time.time()
            }
            
        except Exception as e:
            logger.error(f"âŒ ä»»å‹™å‰µå»ºæ¸¬è©¦å¤±æ•—: {e}")
            return {
                "test_name": "Task_Creation",
                "success": False,
                "error": str(e)
            }
    
    async def test_cross_language_execution(self) -> Dict[str, Any]:
        """æ¸¬è©¦è·¨èªè¨€åŸ·è¡Œ"""
        logger.info("ğŸ”„ æ¸¬è©¦è·¨èªè¨€ä»»å‹™åŸ·è¡Œ...")
        
        try:
            result = await self.test_client.execute_cross_language_task(
                task="python.test_function",
                parameters={"input": "test_data"}
            )
            
            success = result.get("success", False)
            protocol = result.get("protocol", "unknown")
            
            logger.info(f"ğŸ“‹ è·¨èªè¨€åŸ·è¡Œçµæœ: æˆåŠŸ={success}, å”è­°={protocol}")
            
            return {
                "test_name": "Cross_Language_Execution",
                "success": success,
                "protocol": protocol,
                "details": result,
                "timestamp": time.time()
            }
            
        except Exception as e:
            logger.error(f"âŒ è·¨èªè¨€åŸ·è¡Œæ¸¬è©¦å¤±æ•—: {e}")
            return {
                "test_name": "Cross_Language_Execution",
                "success": False,
                "error": str(e)
            }
    
    async def test_aiva_client_integration(self) -> Dict[str, Any]:
        """æ¸¬è©¦ AivaClient æ•´åˆ"""
        logger.info("ğŸ¤ æ¸¬è©¦ AivaClient èˆ‡ gRPC æ•´åˆ...")
        
        try:
            # å‰µå»ºå•Ÿç”¨ gRPC çš„ AivaClient
            aiva_client = AivaClient(
                grpc_enabled=True,
                grpc_server_address=self.server_address
            )
            
            # æ¸¬è©¦æœå‹™èª¿ç”¨
            result = await aiva_client.call_service(
                language="python",
                task="test_task",
                params={"test": "data"}
            )
            
            success = result.get("success", False)
            protocol = result.get("protocol", "unknown")
            
            await aiva_client.close()
            
            logger.info(f"ğŸ“‹ AivaClient æ•´åˆçµæœ: æˆåŠŸ={success}, å”è­°={protocol}")
            
            return {
                "test_name": "AivaClient_Integration",
                "success": success,
                "protocol": protocol,
                "details": result,
                "timestamp": time.time()
            }
            
        except Exception as e:
            logger.error(f"âŒ AivaClient æ•´åˆæ¸¬è©¦å¤±æ•—: {e}")
            return {
                "test_name": "AivaClient_Integration",
                "success": False,
                "error": str(e)
            }
    
    async def test_protocol_fallback(self) -> Dict[str, Any]:
        """æ¸¬è©¦å”è­°å‚™ç”¨æ©Ÿåˆ¶"""
        logger.info("ğŸ”€ æ¸¬è©¦å”è­°è‡ªå‹•åˆ‡æ›...")
        
        try:
            # å‰µå»ºç„¡æ•ˆåœ°å€çš„å®¢æˆ¶ç«¯ä¾†æ¸¬è©¦å‚™ç”¨æ©Ÿåˆ¶
            fallback_client = AIVAGRPCClient("invalid:99999")
            
            # å˜—è©¦èª¿ç”¨ï¼Œæ‡‰è©²è‡ªå‹•åˆ‡æ›åˆ° MQ
            result = await fallback_client.create_task({
                "task_id": "fallback_test",
                "task_type": "scan"
            })
            
            success = result.get("success", False)
            protocol = result.get("protocol", "unknown")
            
            await fallback_client.close()
            
            logger.info(f"ğŸ“‹ å”è­°åˆ‡æ›çµæœ: æˆåŠŸ={success}, å”è­°={protocol}")
            
            return {
                "test_name": "Protocol_Fallback",
                "success": success,
                "protocol": protocol,
                "details": result,
                "timestamp": time.time()
            }
            
        except Exception as e:
            logger.error(f"âŒ å”è­°åˆ‡æ›æ¸¬è©¦å¤±æ•—: {e}")
            return {
                "test_name": "Protocol_Fallback",
                "success": False,
                "error": str(e)
            }
    
    def test_mq_integration(self) -> Dict[str, Any]:
        """æ¸¬è©¦ MQ ç³»çµ±æ•´åˆ"""
        logger.info("ğŸ“¬ æ¸¬è©¦ MQ ç³»çµ±æ•´åˆ...")
        
        try:
            from services.aiva_common.enums import Topic, ModuleName
            
            # ç™¼é€æ¸¬è©¦æ¶ˆæ¯
            message = message_broker.publish(
                topic=Topic.TASK_SCAN_START,
                payload={"test": "grpc_integration"},
                source_module=ModuleName.API_GATEWAY,
                target_module=ModuleName.SCAN,
                trace_id="grpc_test_trace"
            )
            
            success = message and hasattr(message, 'header')
            
            logger.info(f"ğŸ“‹ MQ æ•´åˆçµæœ: æˆåŠŸ={success}")
            
            return {
                "test_name": "MQ_Integration",
                "success": success,
                "message_id": message.header.message_id if success else None,
                "timestamp": time.time()
            }
            
        except Exception as e:
            logger.error(f"âŒ MQ æ•´åˆæ¸¬è©¦å¤±æ•—: {e}")
            return {
                "test_name": "MQ_Integration",
                "success": False,
                "error": str(e)
            }
    
    async def run_all_tests(self) -> Dict[str, Any]:
        """é‹è¡Œæ‰€æœ‰æ¸¬è©¦"""
        logger.info("ğŸ§ª é–‹å§‹ gRPC æ•´åˆæ¸¬è©¦å¥—ä»¶...")
        
        test_results = []
        start_time = time.time()
        
        try:
            # è¨­ç½®æ¸¬è©¦ç’°å¢ƒ
            setup_success = await self.setup_test_environment()
            if not setup_success:
                return {
                    "success": False,
                    "error": "æ¸¬è©¦ç’°å¢ƒè¨­ç½®å¤±æ•—",
                    "timestamp": time.time()
                }
            
            # åŸ·è¡Œæ‰€æœ‰æ¸¬è©¦
            tests = [
                self.test_grpc_health_check,
                self.test_task_creation,
                self.test_cross_language_execution,
                self.test_aiva_client_integration,
                self.test_protocol_fallback,
                self.test_mq_integration
            ]
            
            for test_func in tests:
                try:
                    result = await test_func()
                    test_results.append(result)
                except Exception as e:
                    logger.error(f"âŒ æ¸¬è©¦ {test_func.__name__} åŸ·è¡Œå¤±æ•—: {e}")
                    test_results.append({
                        "test_name": test_func.__name__,
                        "success": False,
                        "error": str(e)
                    })
            
            # è¨ˆç®—ç¸½é«”çµæœ
            successful_tests = sum(1 for r in test_results if r.get("success", False))
            total_tests = len(test_results)
            success_rate = (successful_tests / total_tests * 100) if total_tests > 0 else 0
            
            execution_time = time.time() - start_time
            
            logger.info(f"ğŸ“Š æ¸¬è©¦å®Œæˆ: {successful_tests}/{total_tests} é€šé ({success_rate:.1f}%)")
            
            return {
                "success": success_rate >= 50,  # è‡³å°‘ 50% é€šéæ‰ç®—æˆåŠŸ
                "total_tests": total_tests,
                "successful_tests": successful_tests,
                "success_rate": success_rate,
                "execution_time": execution_time,
                "test_results": test_results,
                "timestamp": time.time()
            }
            
        finally:
            # æ¸…ç†æ¸¬è©¦ç’°å¢ƒ
            await self.cleanup_test_environment()


async def main():
    """ä¸»å‡½æ•¸"""
    logger.info("=" * 60)
    logger.info("ğŸ¤– AIVA v5.0 çµ±ä¸€é€šä¿¡æ¶æ§‹")
    logger.info("ğŸ§ª TODO-006 gRPC æœå‹™æ¡†æ¶æ¸¬è©¦")
    logger.info("=" * 60)
    
    tester = GRPCIntegrationTester()
    
    try:
        # é‹è¡Œæ¸¬è©¦
        results = await tester.run_all_tests()
        
        # ç”Ÿæˆæ¸¬è©¦å ±å‘Š
        def save_report(data, filename):
            with open(filename, 'w', encoding='utf-8') as f:
                json.dump(data, f, indent=2, ensure_ascii=False, default=str)
        
        report_file = Path("TODO_006_gRPC_TEST_REPORT.json")
        save_report(results, report_file)
        
        logger.info(f"ğŸ“„ æ¸¬è©¦å ±å‘Šå·²ç”Ÿæˆ: {report_file}")
        
        # é¡¯ç¤ºçµæœæ‘˜è¦
        if results.get("success", False):
            logger.info("ğŸ‰ gRPC æœå‹™æ¡†æ¶æ¸¬è©¦é€šéï¼")
            logger.info("âœ… TODO-006 å®Œæˆåº¦é©—è­‰æˆåŠŸ")
        else:
            logger.warning("âš ï¸  gRPC æœå‹™æ¡†æ¶æ¸¬è©¦éƒ¨åˆ†å¤±æ•—")
            logger.warning("ğŸ” è«‹æª¢æŸ¥æ¸¬è©¦å ±å‘Šç­è§£è©³æƒ…")
        
        return 0 if results.get("success", False) else 1
        
    except Exception as e:
        logger.error(f"âŒ æ¸¬è©¦åŸ·è¡Œå¤±æ•—: {e}")
        logger.error(f"ğŸ” è©³ç´°éŒ¯èª¤: {traceback.format_exc()}")
        return 1


if __name__ == "__main__":
    exit_code = asyncio.run(main())
    sys.exit(exit_code)